--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
   <body class="body--background">
     <h1 class="intro--greeting">Hello, I'm Emerson Henkel</h1>
     <p class="intro--description">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet
-      exercitationem commodi minima quis, ut reiciendis asperiores distinctio
-      voluptatibus! Dolorum perspiciatis nesciunt ea voluptatem veniam quia
-      dolore ab voluptate magnam iste iure reiciendis provident maiores vero
-      esse quos, laudantium qui, atque culpa! Dolorum quas aperiam quae deleniti
-      dignissimos cumque, pariatur neque.
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere cum sint
+      numquam blanditiis at accusamus, minus repudiandae odio quo tenetur hic
+      nobis corrupti ratione itaque culpa necessitatibus, veritatis iusto sequi?
+      Qui temporibus voluptate maiores labore expedita eligendi voluptatum
+      numquam enim!
     </p>
   </body>
 </html>
