--- a/index.html
+++ b/index.html
@@ -15,13 +15,67 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="body--background">
-    <h1 class="intro--greeting">Hello, I'm Emerson Henkel</h1>
-    <p class="intro--description">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere cum sint
-      numquam blanditiis at accusamus, minus repudiandae odio quo tenetur hic
-      nobis corrupti ratione itaque culpa necessitatibus, veritatis iusto sequi?
-      Qui temporibus voluptate maiores labore expedita eligendi voluptatum
-      numquam enim!
-    </p>
+    <header>
+      <nav class="nav">
+        <ul class="list nav__list">
+          <li class="nav__item"><a href="#About Me">About Me</a></li>
+          <li class="nav__item"><a href="#My Work">My Work</a></li>
+          <li class="nav__item"><a href="#Resume">Resume</a></li>
+          <li class="nav__item"><a href="#Contact Me">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="About Me">
+      <h1 class="intro--greeting">Hello, I'm Emerson Henkel</h1>
+      <p class="intro--description">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere cum
+        sint numquam blanditiis at accusamus, minus repudiandae odio quo tenetur
+        hic nobis corrupti ratione itaque culpa necessitatibus, veritatis iusto
+        sequi? Qui temporibus voluptate maiores labore expedita eligendi
+        voluptatum numquam enim!
+      </p>
+    </section>
+    <section id="My Work">
+      <h2>My Work</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus atque
+        itaque officiis quas, eius quae exercitationem alias recusandae saepe
+        quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
+        atque itaque officiis quas, eius quae exercitationem alias recusandae
+        saepe quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Delectus atque itaque officiis quas, eius quae exercitationem alias
+        recusandae saepe quos.Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Delectus atque itaque officiis quas, eius quae
+        exercitationem alias recusandae saepe quos.
+      </p>
+    </section>
+    <section id="Resume">
+      <h2>Resume</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus atque
+        itaque officiis quas, eius quae exercitationem alias recusandae saepe
+        quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
+        atque itaque officiis quas, eius quae exercitationem alias recusandae
+        saepe quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Delectus atque itaque officiis quas, eius quae exercitationem alias
+        recusandae saepe quos.Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Delectus atque itaque officiis quas, eius quae
+        exercitationem alias recusandae saepe quos.
+      </p>
+    </section>
+    <section id="Contact Me">
+      <h2>Contact Me</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus atque
+        itaque officiis quas, eius quae exercitationem alias recusandae saepe
+        quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
+        atque itaque officiis quas, eius quae exercitationem alias recusandae
+        saepe quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Delectus atque itaque officiis quas, eius quae exercitationem alias
+        recusandae saepe quos.Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Delectus atque itaque officiis quas, eius quae
+        exercitationem alias recusandae saepe quos.
+      </p>
+    </section>
   </body>
 </html>
