--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         </ul>
       </nav>
     </header>
+
     <section id="About Me">
-      <h1 class="intro--greeting">Hello, I'm Emerson Henkel</h1>
+      <h1 class="intro--greeting">
+        Hello, I'm <wrap class="makeBlue">Emerson Henkel</wrap>
+      </h1>
       <p class="intro--description">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere cum
         sint numquam blanditiis at accusamus, minus repudiandae odio quo tenetur
