--- a/index.html
+++ b/index.html
@@ -31,53 +31,52 @@
         Hello, I'm <wrap class="makeBlue">Emerson Henkel</wrap>
       </h1>
       <p class="intro--description">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere cum
-        sint numquam blanditiis at accusamus, minus repudiandae odio quo tenetur
-        hic nobis corrupti ratione itaque culpa necessitatibus, veritatis iusto
-        sequi? Qui temporibus voluptate maiores labore expedita eligendi
-        voluptatum numquam enim!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore soluta
+        quas nesciunt officiis in sunt aut a fugiat? Hic praesentium odit enim
+        veritatis vitae doloremque molestias sunt dolore voluptas iusto minima
+        voluptatibus ipsa atque aliquam fugit eos dignissimos aut doloribus,
+        expedita ullam, repellendus, commodi illo animi! Nisi consectetur porro
+        vel!
       </p>
     </section>
     <section id="My Work">
       <h2>My Work</h2>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus atque
-        itaque officiis quas, eius quae exercitationem alias recusandae saepe
-        quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
-        atque itaque officiis quas, eius quae exercitationem alias recusandae
-        saepe quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Delectus atque itaque officiis quas, eius quae exercitationem alias
-        recusandae saepe quos.Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Delectus atque itaque officiis quas, eius quae
-        exercitationem alias recusandae saepe quos.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore at
+        quasi, tempora odio minima modi laborum eius quam, sint voluptas aut
+        corporis rerum placeat hic temporibus deleniti? Ratione molestiae
+        provident fugiat beatae harum quis. Molestiae atque quibusdam
+        perspiciatis incidunt vero distinctio voluptatem asperiores voluptatibus
+        earum. Harum corrupti magnam voluptatibus! Iusto, officia alias. Quas
+        illum et unde minima at odio ex magnam? Sed repellat accusantium
+        veritatis dicta voluptas, velit culpa nesciunt recusandae, sint ullam
+        non blanditiis.
       </p>
     </section>
     <section id="Resume">
       <h2>Resume</h2>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus atque
-        itaque officiis quas, eius quae exercitationem alias recusandae saepe
-        quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
-        atque itaque officiis quas, eius quae exercitationem alias recusandae
-        saepe quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Delectus atque itaque officiis quas, eius quae exercitationem alias
-        recusandae saepe quos.Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Delectus atque itaque officiis quas, eius quae
-        exercitationem alias recusandae saepe quos.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde delectus
+        nisi, nam saepe ut possimus exercitationem quisquam. Nostrum, error
+        dolorem? Quasi, debitis natus necessitatibus optio harum impedit omnis
+        sed beatae ut minus at, quia et maxime! Adipisci deleniti velit aliquid
+        porro odio, nisi cum ducimus accusamus! Sapiente delectus ipsa itaque
+        veritatis! Facilis neque perspiciatis eligendi laudantium numquam
+        reiciendis sint voluptate totam natus aliquid nam ducimus voluptates
+        animi quasi eum dolorum laborum nulla, amet deserunt. Ipsam?
       </p>
     </section>
     <section id="Contact Me">
       <h2>Contact Me</h2>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus atque
-        itaque officiis quas, eius quae exercitationem alias recusandae saepe
-        quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
-        atque itaque officiis quas, eius quae exercitationem alias recusandae
-        saepe quos.Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-        Delectus atque itaque officiis quas, eius quae exercitationem alias
-        recusandae saepe quos.Lorem ipsum dolor, sit amet consectetur
-        adipisicing elit. Delectus atque itaque officiis quas, eius quae
-        exercitationem alias recusandae saepe quos.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
+        eveniet tenetur. Aspernatur earum perferendis adipisci vel soluta magni
+        consequuntur odit, harum animi id, corporis sit pariatur dolorum quod
+        unde qui aliquid quo hic beatae deserunt quibusdam blanditiis vero.
+        Laboriosam officiis nesciunt modi cum cumque earum ab quas! Illum
+        repellendus maiores hic aut, nisi quis adipisci veniam quos consectetur
+        facilis et odit suscipit facere eaque dicta fugit, numquam dolore
+        recusandae ullam dolor cum iure architecto quam!
       </p>
     </section>
   </body>
