--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
     />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/ce301d833b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="body--background">
     <header>
       <nav class="nav">
         <ul class="list nav__list">
           <li class="nav__item"><a href="#About Me">About Me</a></li>
+          <li class="nav__item"><a href="#Contact Me">Contact Me</a></li>
           <li class="nav__item"><a href="#My Work">My Work</a></li>
           <li class="nav__item"><a href="#Resume">Resume</a></li>
-          <li class="nav__item"><a href="#Contact Me">Contact Me</a></li>
         </ul>
       </nav>
     </header>
@@ -37,6 +41,23 @@
         voluptatibus ipsa atque aliquam fugit eos dignissimos aut doloribus,
         expedita ullam, repellendus, commodi illo animi! Nisi consectetur porro
         vel!
+      </p>
+    </section>
+    <section id="Contact Me">
+      <h2>Contact Me</h2>
+      <p>
+        <a href="mailto: emm.henkel@gmail.com">
+          <i class="fa-solid fa-envelope fa-2xl"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/emerson-henkel-2296ab1b8/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin fa-2xl"></i>
+        </a>
+        <a href="https://github.com/emm-henkel" target="_blank">
+          <i class="fa-brands fa-github-square fa-2xl"></i>
+        </a>
       </p>
     </section>
     <section id="My Work">
@@ -64,19 +85,6 @@
         veritatis! Facilis neque perspiciatis eligendi laudantium numquam
         reiciendis sint voluptate totam natus aliquid nam ducimus voluptates
         animi quasi eum dolorum laborum nulla, amet deserunt. Ipsam?
-      </p>
-    </section>
-    <section id="Contact Me">
-      <h2>Contact Me</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis,
-        eveniet tenetur. Aspernatur earum perferendis adipisci vel soluta magni
-        consequuntur odit, harum animi id, corporis sit pariatur dolorum quod
-        unde qui aliquid quo hic beatae deserunt quibusdam blanditiis vero.
-        Laboriosam officiis nesciunt modi cum cumque earum ab quas! Illum
-        repellendus maiores hic aut, nisi quis adipisci veniam quos consectetur
-        facilis et odit suscipit facere eaque dicta fugit, numquam dolore
-        recusandae ullam dolor cum iure architecto quam!
       </p>
     </section>
   </body>
