added icon colors

--- a/index.html
+++ b/index.html
@@ -35,28 +35,24 @@
         Hello, I'm <wrap class="makeBlue">Emerson Henkel</wrap>
       </h1>
       <p class="intro--description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore soluta
-        quas nesciunt officiis in sunt aut a fugiat? Hic praesentium odit enim
-        veritatis vitae doloremque molestias sunt dolore voluptas iusto minima
-        voluptatibus ipsa atque aliquam fugit eos dignissimos aut doloribus,
-        expedita ullam, repellendus, commodi illo animi! Nisi consectetur porro
-        vel!
+        I am currently a student studying computer science
+        <a href="https://www.rowan.edu">@rowanuniversity</a>
       </p>
     </section>
     <section id="Contact Me">
       <h2>Contact Me</h2>
       <p>
         <a href="mailto: emm.henkel@gmail.com">
-          <i class="fa-solid fa-envelope fa-2xl"></i>
+          <i class="fa-solid fa-envelope fa-xl"></i>
         </a>
         <a
           href="https://www.linkedin.com/in/emerson-henkel-2296ab1b8/"
           target="_blank"
         >
-          <i class="fa-brands fa-linkedin fa-2xl"></i>
+          <i class="fa-brands fa-linkedin fa-xl"></i>
         </a>
         <a href="https://github.com/emm-henkel" target="_blank">
-          <i class="fa-brands fa-github-square fa-2xl"></i>
+          <i class="fa-brands fa-github-square fa-xl"></i>
         </a>
       </p>
     </section>
