added resume icon and text to about me

--- a/index.html
+++ b/index.html
@@ -35,29 +35,40 @@
         Hello, I'm <wrap class="makeBlue">Emerson Henkel</wrap>
       </h1>
       <p class="intro--description">
-        I am currently a student studying computer science
-        <a href="https://www.rowan.edu">@rowanuniversity</a>
+        I am currently a student
+        <a href="https://www.rowan.edu">@rowan university</a> studying computer
+        science with a concentration in graphics, visulization and gaming
+        technology. Upon completion of my degree, I plan to immerse myself
+        within the world of web development. I have experience and knowledge
+        working with HTML, CSS, JavaScript (both for building and creating test
+        scripts), React, GIT, and Java.
       </p>
     </section>
     <section id="Contact Me">
-      <h2>Contact Me</h2>
-      <p>
-        <a href="mailto: emm.henkel@gmail.com">
-          <i class="fa-solid fa-envelope fa-xl"></i>
-        </a>
-        <a
-          href="https://www.linkedin.com/in/emerson-henkel-2296ab1b8/"
-          target="_blank"
-        >
-          <i class="fa-brands fa-linkedin fa-xl"></i>
-        </a>
-        <a href="https://github.com/emm-henkel" target="_blank">
-          <i class="fa-brands fa-github-square fa-xl"></i>
-        </a>
-      </p>
+      <h2>contact me</h2>
+      <ul class="contactme--list">
+        <li class="contactme--icon">
+          <a href="mailto: emm.henkel@gmail.com">
+            <i class="fa-solid fa-envelope fa-xl"></i>
+          </a>
+        </li>
+        <li class="contactme--icon">
+          <a
+            href="https://www.linkedin.com/in/emerson-henkel-2296ab1b8/"
+            target="_blank"
+          >
+            <i class="fa-brands fa-linkedin fa-xl"></i>
+          </a>
+        </li>
+        <li class="contactme--icon">
+          <a href="https://github.com/emm-henkel" target="_blank">
+            <i class="fa-brands fa-github-square fa-xl"></i>
+          </a>
+        </li>
+      </ul>
     </section>
     <section id="My Work">
-      <h2>My Work</h2>
+      <h2>my work</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore at
         quasi, tempora odio minima modi laborum eius quam, sint voluptas aut
@@ -71,17 +82,8 @@
       </p>
     </section>
     <section id="Resume">
-      <h2>Resume</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde delectus
-        nisi, nam saepe ut possimus exercitationem quisquam. Nostrum, error
-        dolorem? Quasi, debitis natus necessitatibus optio harum impedit omnis
-        sed beatae ut minus at, quia et maxime! Adipisci deleniti velit aliquid
-        porro odio, nisi cum ducimus accusamus! Sapiente delectus ipsa itaque
-        veritatis! Facilis neque perspiciatis eligendi laudantium numquam
-        reiciendis sint voluptate totam natus aliquid nam ducimus voluptates
-        animi quasi eum dolorum laborum nulla, amet deserunt. Ipsam?
-      </p>
+      <h2>resume</h2>
+      <i class="fa-solid fa-file-arrow-down fa-xl resume--icon"></i>
     </section>
   </body>
 </html>
