--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       </h1>
       <p class="intro--description">
         I am currently a student
-        <a href="https://www.rowan.edu">@rowan university</a> studying computer
-        science with a concentration in graphics, visulization and gaming
-        technology. Upon completion of my degree, I plan to immerse myself
-        within the world of web development. I have experience and knowledge
-        working with HTML, CSS, JavaScript (both for building and creating test
-        scripts), React, GIT, and Java.
+        <a href="https://www.rowan.edu" target="_blank">@rowan university</a>
+        studying computer science with a concentration in graphics, visulization
+        and gaming technology. Upon completion of my degree, I plan to immerse
+        myself within the world of web development. I have experience and
+        knowledge working with HTML, CSS, JavaScript (both for building and
+        creating test scripts), React, GIT, and Java.
       </p>
     </section>
     <section id="Contact Me">
@@ -49,7 +49,7 @@
       <ul class="contactme--list">
         <li class="contactme--icon">
           <a href="mailto: emm.henkel@gmail.com">
-            <i class="fa-solid fa-envelope fa-xl"></i>
+            <i class="icon fa-solid fa-envelope fa-xl"></i>
           </a>
         </li>
         <li class="contactme--icon">
@@ -57,12 +57,12 @@
             href="https://www.linkedin.com/in/emerson-henkel-2296ab1b8/"
             target="_blank"
           >
-            <i class="fa-brands fa-linkedin fa-xl"></i>
+            <i class="icon fa-brands fa-linkedin fa-xl"></i>
           </a>
         </li>
         <li class="contactme--icon">
           <a href="https://github.com/emm-henkel" target="_blank">
-            <i class="fa-brands fa-github-square fa-xl"></i>
+            <i class="icon fa-brands fa-github-square fa-xl"></i>
           </a>
         </li>
       </ul>
@@ -83,7 +83,9 @@
     </section>
     <section id="Resume">
       <h2>resume</h2>
-      <i class="fa-solid fa-file-arrow-down fa-xl resume--icon"></i>
+      <a href="">
+        <i class="icon fa-solid fa-file-arrow-down fa-xl resume--icon"></i>
+      </a>
     </section>
   </body>
 </html>
