added working java script for nav menu

--- a/index.html
+++ b/index.html
@@ -19,15 +19,28 @@
     ></script>
   </head>
   <body class="body--background">
+    
     <header>
+    
       <nav class="nav">
-        <ul class="list nav__list">
+
+        <div class="microchip">
+          <i class="icon fa-solid fa-microchip fa-2xl"></i>
+        </div>
+
+        <button class="hamburger nav__item" id="hamburger">
+          <i class="icon fa-solid fa-bars fa-xl"></i>
+        </button>
+
+        <ul class="list nav__list nav-ul" id="nav-ul">
           <li class="nav__item"><a href="#About Me">About Me</a></li>
           <li class="nav__item"><a href="#Contact Me">Contact Me</a></li>
           <li class="nav__item"><a href="#My Work">My Work</a></li>
           <li class="nav__item"><a href="#Resume">Resume</a></li>
         </ul>
+
       </nav>
+
     </header>
 
     <section id="About Me">
@@ -87,5 +100,8 @@
         <i class="icon fa-solid fa-file-arrow-down fa-xl resume--icon"></i>
       </a>
     </section>
+
+    <script src="script.js"></script>
+
   </body>
 </html>
