--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     <section id="Resume">
       <h2>resume</h2>
-      <a href="Emerson.Henkel-Resume-July-2022.pdf" target="_blank">
+      <a href="Emerson.Henkel-Resume-Sep22.pdf" target="_blank">
         <i class="icon fa-solid fa-file-arrow-down fa-xl resume--icon"></i>
       </a>
     </section>
