--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
     ></script>
   </head>
   <body class="body--background">
-    
     <header>
-    
       <nav class="nav">
-
         <div class="microchip">
           <i class="icon fa-solid fa-microchip fa-2xl"></i>
         </div>
@@ -38,9 +35,7 @@
           <li class="nav__item"><a href="#My Work">My Work</a></li>
           <li class="nav__item"><a href="#Resume">Resume</a></li>
         </ul>
-
       </nav>
-
     </header>
 
     <section id="About Me">
@@ -53,8 +48,9 @@
         studying computer science with a concentration in graphics, visulization
         and gaming technology. Upon completion of my degree, I plan to immerse
         myself within the world of web development. I have experience and
-        knowledge working with HTML, CSS, JavaScript (both for building and
-        creating test scripts), React, GIT, and Java.
+        knowledge working with HTML, CSS, JavaScript, React, GIT, and Java. This
+        semester, I'm taking a class focused on Data Visualization and a class
+        focused on Database Design and Architecture.
       </p>
     </section>
     <section id="Contact Me">
@@ -102,6 +98,5 @@
     </section>
 
     <script src="script.js"></script>
-
   </body>
 </html>
