added trinity link

--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
       </h1>
       <p class="intro--description">
         I am currently a student
-        <a href="https://www.rowan.edu" target="_blank">@rowan university</a>
+        <a href="https://www.rowan.edu" target="_blank">@Rowan University</a>
         studying computer science with a concentration in graphics, visulization
         and gaming technology. Upon completion of my degree, I plan to immerse
         myself within the world of web development. I have experience and
         knowledge working with HTML, CSS, JavaScript, React, GIT, and Java. This
-        semester, I'm taking a class focused on <wrap class="makeBlue">Data Visualization</wrap> and a class
-        focused on <wrap class="makeBlue2">Database Design and Architecture</wrap>.
+        semester, I'm taking a class focused on
+        <wrap class="makeBlue">Data Visualization</wrap> and a class focused on
+        <wrap class="makeBlue2">Database Design and Architecture</wrap>.
       </p>
     </section>
     <section id="Contact Me">
-      <h2>contact me</h2>
+      <h2>Contact Me</h2>
       <ul class="contactme--list">
         <li class="contactme--icon">
           <a href="mailto: emm.henkel@gmail.com">
@@ -77,14 +78,26 @@
       </ul>
     </section>
     <section id="My Work">
-      <h2>my work</h2>
+      <h2>My Work</h2>
       <p>
-        As a student I have <wrap class="makeBlue">developed multiple web applications and websites</wrap>. I
-        have most often leveraged stock <wrap class="makeBlue">HTML, CSS, and JavaScript</wrap> to develop.
-        Though not my strongest position, I have used frameworks, libraries, and
-        APIs such as <wrap class="makeBlue">ReactJS, Firebase, Tailwind CSS</wrap>. This, my portfolio website
-        has been the best place for me to test both my programming skills as
-        well as my creative vision.
+        As a student I have
+        <wrap class="makeBlue"
+          >developed multiple web applications and websites</wrap
+        >. I have most often leveraged stock
+        <wrap class="makeBlue">HTML, CSS, and JavaScript</wrap> to develop. I
+        have used frameworks, libraries, and APIs such as
+        <wrap class="makeBlue">ReactJS, Firebase, Tailwind CSS</wrap>. This, my
+        portfolio website has been the best place for me to test both my
+        programming skills as well as my creative vision.
+      </p>
+
+      <p>
+        During a summer internship
+        <a href="https://www.trinityit.biz/" target="_blank"
+          >@Trinity Information Technology</a
+        >
+        I assisted in developing test scripts, updating and modifying code so it
+        is both easier to read and easier to maintain.
       </p>
     </section>
     <section id="Resume">
