--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         knowledge working with HTML, CSS, JavaScript, React, GIT, and Java. This
         semester, I'm taking a class focused on
         <wrap class="makeBlue">Data Visualization</wrap> and a class focused on
-        <wrap class="makeBlue2">Database Design and Architecture</wrap>.
+        <wrap class="makeBlue">Database Design and Architecture</wrap>.
       </p>
     </section>
     <section id="Contact Me">
@@ -75,18 +75,19 @@
             <i class="icon fa-brands fa-github-square fa-xl"></i>
           </a>
         </li>
+        <li class="contactme--icon">
+          <p class="makeBlue">emm.henkel@gmail.com</p>
+        </li>
       </ul>
     </section>
     <section id="My Work">
       <h2>My Work</h2>
       <p>
-        As a student I have
-        <wrap class="makeBlue"
-          >developed multiple web applications and websites</wrap
-        >. I have most often leveraged stock
+        As a student I have developed multiple web applications and websites. I
+        have most often leveraged stock
         <wrap class="makeBlue">HTML, CSS, and JavaScript</wrap> to develop. I
-        have used frameworks, libraries, and APIs such as
-        <wrap class="makeBlue">ReactJS, Firebase, Tailwind CSS</wrap>. This, my
+        have used frameworks, and libraries such as
+        <wrap class="makeBlue">ReactJS, and Tailwind CSS</wrap>. This, my
         portfolio website has been the best place for me to test both my
         programming skills as well as my creative vision.
       </p>
@@ -96,8 +97,8 @@
         <a href="https://www.trinityit.biz/" target="_blank"
           >@Trinity Information Technology</a
         >
-        I assisted in developing test scripts, updating and modifying code so it
-        is both easier to read and easier to maintain.
+        I assisted in developing test scripts, adding new features, and
+        maintaining old code so that it can be better understood.
       </p>
     </section>
     <section id="Resume">
